k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: legacy-hosts-deployment
  labels:
    app: legacy-hosts
spec:
  replicas: 3
  selector:
    matchLabels:
      app: legacy-hosts
  template:
    metadata:
      labels:
        app: legacy-hosts
    spec:
      containers:
      - name: legacy-hosts
        image: registry.zeit.de/legacy-hosts:v0.1
        volumeMounts:
        - mountPath: /content
          name: legacy-hosts-content
        ports:
        - containerPort: 8080
      volumes:
      - name: legacy-hosts-content
        nfs:
          server: ha-nfs.zeit.de
          path: "/cmscontent/legacy-hosts"
