k8s/service.yml
kind: Service
apiVersion: v1
metadata:
  name: legacy-hosts-service
spec:
  selector:
    app: legacy-hosts
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
