k8s/ingress-extrernal.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: legacy-hosts-external
  namespace: default
  labels:
    zon-ingress-type: "external"
  annotations:
    ingress.kubernetes.io/custom-response-headers: "Content-Security-Policy: upgrade-insecure-requests"
    traefik.frontend.entryPoints: "http,https"
spec:
  rules:
  - host: "images.zeit.de"
    http:
      paths:
      - backend:
          serviceName: legacy-hosts-service
          servicePort: 80
  - host: "zeus.zeit.de"
    http:
      paths:
      - backend:
          serviceName: legacy-hosts-service
          servicePort: 80
